test/libsolidity/syntaxTests/immutable/non-value_type_struct_with_mapping.sol
contract Contract {
    struct S {
        mapping(uint => address) map;
    }

    S immutable s;
}
// ----
// TypeError 6377: (84-97): Immutable variables cannot have a non-value type.
